<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mapalocalizacion</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ter1">Terreno</string>
    <string name="ter2">Hibrido</string>
    <string name="ter3">Satelite</string>
    <string name="ter4">Normal</string>
    <string name="ter5">None</string>
</resources>
