<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings" android:title="@string/ter1"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings2" android:title="@string/ter2"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings3" android:title="@string/ter3"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings4" android:title="@string/ter4"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings5" android:title="@string/ter5"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
